# ChargeFW2

./: .dockerignore  .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: docker-build.yml
data/: CMakeLists.txt  amino_acids.txt  methods.json  pte.csv
data/parameters/: ABEEM_00_original.json  Charge2_00_original.json  DENR_00_from_QEq.json  DelRe_00_original.json  EEM_00_Cheminf_b3lyp_aim.json  EEM_00_NEEMP_ccd2016_mpa.json  EEM_00_NEEMP_ccd2016_mpa2.json  EEM_00_NEEMP_ccd2016_npa.json  EEM_00_NEEMP_ccd2016_npa2.json  EEM_00_test_from_NEEMP.json  EEM_01_Cheminf_b3lyp_mpa.json  EEM_01_test_from_Cheminf.json  EEM_02_Cheminf_b3lyp_npa.json  EEM_03_Cheminf_hf_aim.json  EEM_04_Cheminf_hf_mpa.json  EEM_05_Cheminf_hf_npa.json  EEM_05_NEEMP_ccd2016_mpa.json  EEM_05_NEEMP_ccd2016_mpa2.json  EEM_06_Bult2002_che.json  EEM_07_Bult2002_hir.json  EEM_08_Bult2004_aim.json  EEM_09_Bult2002_mk.json  EEM_10_Bult2002_mul.json  EEM_10_Cheminf_b3lyp_aim.json  EEM_10_Cheminf_b3lyp_mpa.json  EEM_10_Cheminf_b3lyp_npa.json  EEM_10_Cheminf_hf_aim.json  EEM_10_Cheminf_hf_mpa.json  EEM_10_Cheminf_hf_npa.json  EEM_11_Bult2002_npa.json  EEM_12_Ouy2009.json  EEM_13_Ouy2009_elem.json  EEM_14_Ouy2009_elemF.json  EEM_15_Svob2007_hm2.json  EEM_16_Svob2007_cbeg2.json  EEM_17_Svob2007_chal2.json  EEM_18_Svob2007_cmet2.json  EEM_19_Baek1991.json  EEM_20_Bult2002_che.json  EEM_20_Bult2002_hir.json  (+45 more)
doc/: ChargeFW2 - tutorial.ipynb  documentation.md  molecules.sdf
docker/: Dockerfile
scripts/: run_bindings.py  run_subprocess.py
src/: CMakeLists.txt  Charges.cpp  Charges.h  Classifier.cpp  Classifier.h  Element.h  Method.cpp  Method.h  Parameters.cpp  Parameters.h  PeriodicTable.cpp  PeriodicTable.h  candidates.cpp  candidates.h  chargefw2.h  chargefw2.h.in  charges.cpp  charges.h  classifier.cpp  classifier.h  config.cpp  config.h  config.h.in  ee_method.cpp  ee_method.h  element.cpp  element.h  geometry.cpp  geometry.h  main.cpp  method.cpp  method.h  method_registry.h  options.cpp  options.h  parameterization.cpp  parameterization.h  parameters.cpp  parameters.h  periodic_table.cpp  (+5 more)
src/exceptions/: CMakeLists.txt  file_exception.cpp  file_exception.h  internal_exception.cpp  internal_exception.h  parameter_exception.cpp  parameter_exception.h
src/formats/: CMakeLists.txt  Reader.h  SDF.cpp  SDF.h  bonds.cpp  bonds.h  cif.cpp  cif.h  common.cpp  common.h  mmcif.cpp  mmcif.h  mol2.cpp  mol2.h  pdb.cpp  pdb.h  pqr.cpp  pqr.h  reader.cpp  reader.h  save_charges.cpp  save_charges.h  sdf.cpp  sdf.h  txt.cpp  txt.h  writer.cpp  writer.h
src/methods/: CMakeLists.txt  Dummy.cpp  Dummy.h  EEM.cpp  EEM.h  Formal.cpp  Formal.h  PEOE.cpp  PEOE.h  abeem.cpp  abeem.h  charge2.cpp  charge2.h  delre.cpp  delre.h  denr.cpp  denr.h  dummy.cpp  dummy.h  eem.cpp  eem.h  eqeq.cpp  eqeq.h  eqeqc.cpp  eqeqc.h  formal.cpp  formal.h  gdac.cpp  gdac.h  kcm.cpp  kcm.h  mgc.cpp  mgc.h  mpeoe.cpp  mpeoe.h  peoe.cpp  peoe.h  qeq.cpp  qeq.h  sfkeem.cpp  (+13 more)
src/structures/: Atom.cpp  Atom.h  Bond.cpp  Bond.h  CMakeLists.txt  Element.cpp  Molecule.cpp  Molecule.h  MoleculeSet.cpp  MoleculeSet.h  atom.cpp  atom.h  bond.cpp  bond.h  molecule.cpp  molecule.h  molecule_set.cpp  molecule_set.h
src/utility/: CMakeLists.txt  Utility.cpp  Utility.h  exceptions.h  install.cpp  install.h  strings.cpp  strings.h  utility.cpp  utility.h
utils/: ccd_bond_order.py  convert_parameters.py
